erDiagram
  %% Important enums used across core flows:
  %% users.account_status: ACTIVE | PENDING | SUSPENDED | DELETED
  %% enrollments.status: enrolled | dropped | completed
  %% intervention_cases.status: active | completed | dismissed
  %% class_records.status: draft | finalized | locked
  %% class_record_final_grades.remarks: Passed | For Intervention

  USERS {
    uuid id PK
    text email
    text account_status
    timestamp created_at
  }
  ROLES {
    uuid id PK
    text name
  }
  USER_ROLES {
    uuid user_id PK
    uuid role_id PK
    timestamp assigned_at
  }
  STUDENT_PROFILES {
    uuid user_id PK
    text grade_level
    varchar lrn
  }
  SECTIONS {
    uuid id PK
    uuid adviser_id FK
    text grade_level
    text school_year
  }
  CLASSES {
    uuid id PK
    uuid section_id FK
    uuid teacher_id FK
    text subject_code
    text school_year
  }
  CLASS_SCHEDULES {
    uuid id PK
    uuid class_id FK
    text days
    text start_time
    text end_time
  }
  ENROLLMENTS {
    uuid id PK
    uuid student_id FK
    uuid class_id FK
    uuid section_id FK
    text status
  }
  LESSONS {
    uuid id PK
    uuid class_id FK
    text title
    bool is_draft
  }
  LESSON_CONTENT_BLOCKS {
    uuid id PK
    uuid lesson_id FK
    text type
    int order
  }
  LESSON_COMPLETIONS {
    uuid id PK
    uuid student_id FK
    uuid lesson_id FK
    int progress_percentage
  }
  ASSESSMENTS {
    uuid id PK
    uuid class_id FK
    text type
    int passing_score
    bool is_published
  }
  ASSESSMENT_QUESTIONS {
    uuid id PK
    uuid assessment_id FK
    text type
    int points
  }
  ASSESSMENT_QUESTION_OPTIONS {
    uuid id PK
    uuid question_id FK
    text text
    bool is_correct
  }
  ASSESSMENT_ATTEMPTS {
    uuid id PK
    uuid student_id FK
    uuid assessment_id FK
    int attempt_number
    int score
  }
  ASSESSMENT_RESPONSES {
    uuid id PK
    uuid attempt_id FK
    uuid question_id FK
    uuid selected_option_id FK
    bool is_correct
    int points_earned
  }
  CLASS_RECORDS {
    uuid id PK
    uuid class_id FK
    uuid teacher_id FK
    text grading_period
    text status
  }
  CLASS_RECORD_CATEGORIES {
    uuid id PK
    uuid class_record_id FK
    text name
    numeric weight_percentage
  }
  CLASS_RECORD_ITEMS {
    uuid id PK
    uuid class_record_id FK
    uuid category_id FK
    uuid assessment_id FK
    text title
    numeric max_score
  }
  CLASS_RECORD_SCORES {
    uuid id PK
    uuid class_record_item_id FK
    uuid student_id FK
    numeric score
  }
  CLASS_RECORD_FINAL_GRADES {
    uuid id PK
    uuid class_record_id FK
    uuid student_id FK
    numeric final_percentage
    text remarks
  }
  PERFORMANCE_SNAPSHOTS {
    uuid id PK
    uuid class_id FK
    uuid student_id FK
    numeric blended_score
    bool is_at_risk
    numeric threshold_applied
  }
  PERFORMANCE_LOGS {
    uuid id PK
    uuid class_id FK
    uuid student_id FK
    bool current_is_at_risk
    numeric blended_score
    numeric threshold_applied
  }
  INTERVENTION_CASES {
    uuid id PK
    uuid class_id FK
    uuid student_id FK
    text status
    numeric trigger_score
    numeric threshold_applied
  }
  INTERVENTION_ASSIGNMENTS {
    uuid id PK
    uuid case_id FK
    uuid lesson_id FK
    uuid assessment_id FK
    text assignment_type
    bool is_completed
    int xp_awarded
  }
  LXP_PROGRESS {
    uuid student_id PK
    uuid class_id PK
    int xp_total
    int checkpoints_completed
  }
  SYSTEM_EVALUATIONS {
    uuid id PK
    uuid submitted_by FK
    text target_module
    int usability_score
    int functionality_score
    int performance_score
    int satisfaction_score
  }
  AI_INTERACTION_LOGS {
    uuid id PK
    uuid user_id FK
    text session_type
    text model_used
    timestamp created_at
  }
  EXTRACTED_MODULES {
    uuid id PK
    uuid file_id FK
    uuid class_id FK
    uuid teacher_id FK
    text extraction_status
    bool is_applied
  }
  UPLOADED_FILES {
    uuid id PK
    uuid folder_id FK
    uuid teacher_id FK
    uuid class_id FK
    text scope
  }
  LIBRARY_FOLDERS {
    uuid id PK
    uuid owner_id FK
    uuid parent_id FK
    text scope
  }
  ANNOUNCEMENTS {
    uuid id PK
    uuid class_id FK
    uuid author_id FK
    text title
    timestamp published_at
  }
  NOTIFICATIONS {
    uuid id PK
    uuid user_id FK
    text type
    bool is_read
  }

  USERS ||--o{ USER_ROLES : has
  ROLES ||--o{ USER_ROLES : grants
  USERS ||--|| STUDENT_PROFILES : has

  USERS ||--o{ SECTIONS : advises
  SECTIONS ||--o{ CLASSES : contains
  USERS ||--o{ CLASSES : teaches
  CLASSES ||--o{ CLASS_SCHEDULES : schedules
  USERS ||--o{ ENROLLMENTS : enrolled_as_student
  CLASSES o|--o{ ENROLLMENTS : class_membership
  SECTIONS ||--o{ ENROLLMENTS : section_membership

  CLASSES ||--o{ LESSONS : has
  LESSONS ||--o{ LESSON_CONTENT_BLOCKS : contains
  USERS ||--o{ LESSON_COMPLETIONS : completes
  LESSONS ||--o{ LESSON_COMPLETIONS : completion_rows

  CLASSES ||--o{ ASSESSMENTS : has
  ASSESSMENTS ||--o{ ASSESSMENT_QUESTIONS : has
  ASSESSMENT_QUESTIONS ||--o{ ASSESSMENT_QUESTION_OPTIONS : has
  USERS ||--o{ ASSESSMENT_ATTEMPTS : attempts
  ASSESSMENTS ||--o{ ASSESSMENT_ATTEMPTS : receives
  ASSESSMENT_ATTEMPTS ||--o{ ASSESSMENT_RESPONSES : contains
  ASSESSMENT_QUESTIONS ||--o{ ASSESSMENT_RESPONSES : answered_for
  ASSESSMENT_QUESTION_OPTIONS o|--o{ ASSESSMENT_RESPONSES : selected_option

  CLASSES ||--o{ CLASS_RECORDS : has
  USERS ||--o{ CLASS_RECORDS : owned_by_teacher
  CLASS_RECORDS ||--o{ CLASS_RECORD_CATEGORIES : has
  CLASS_RECORDS ||--o{ CLASS_RECORD_ITEMS : has
  CLASS_RECORD_CATEGORIES ||--o{ CLASS_RECORD_ITEMS : groups
  ASSESSMENTS o|--o{ CLASS_RECORD_ITEMS : optional_link
  CLASS_RECORD_ITEMS ||--o{ CLASS_RECORD_SCORES : scores
  USERS ||--o{ CLASS_RECORD_SCORES : student_score
  CLASS_RECORDS ||--o{ CLASS_RECORD_FINAL_GRADES : finalizes
  USERS ||--o{ CLASS_RECORD_FINAL_GRADES : student_grade

  CLASSES ||--o{ PERFORMANCE_SNAPSHOTS : snapshot_for
  USERS ||--o{ PERFORMANCE_SNAPSHOTS : snapshot_student
  CLASSES ||--o{ PERFORMANCE_LOGS : logs_for
  USERS ||--o{ PERFORMANCE_LOGS : log_student

  CLASSES ||--o{ INTERVENTION_CASES : intervention_pool
  USERS ||--o{ INTERVENTION_CASES : intervention_student
  INTERVENTION_CASES ||--o{ INTERVENTION_ASSIGNMENTS : contains
  LESSONS o|--o{ INTERVENTION_ASSIGNMENTS : lesson_review
  ASSESSMENTS o|--o{ INTERVENTION_ASSIGNMENTS : assessment_retry
  USERS ||--o{ LXP_PROGRESS : progress_student
  CLASSES ||--o{ LXP_PROGRESS : progress_class
  USERS ||--o{ SYSTEM_EVALUATIONS : submits

  USERS ||--o{ AI_INTERACTION_LOGS : prompts
  UPLOADED_FILES ||--o{ EXTRACTED_MODULES : extracted_from
  CLASSES ||--o{ EXTRACTED_MODULES : context_class
  USERS ||--o{ EXTRACTED_MODULES : extracted_by_teacher

  USERS ||--o{ UPLOADED_FILES : uploads
  CLASSES o|--o{ UPLOADED_FILES : class_materials
  LIBRARY_FOLDERS o|--o{ UPLOADED_FILES : contains
  USERS ||--o{ LIBRARY_FOLDERS : owns
  LIBRARY_FOLDERS o|--o{ LIBRARY_FOLDERS : parent_child

  CLASSES ||--o{ ANNOUNCEMENTS : has
  USERS ||--o{ ANNOUNCEMENTS : authors
  USERS ||--o{ NOTIFICATIONS : receives
